K8s/multi-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multi-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: multi-web
  template:
    metadata:
      labels:
        app: multi-web
    spec:
      containers:
      - image: swithan/ctf_challenges:multi_web
        name: multi-web
        imagePullPolicy: Always
        resources:
          requests:
            memory: "32Mi"
            cpu: "0.2"
          limits:
            memory: "64Mi"
            cpu: "0.5"
        ports:
        - containerPort: 8080
          protocol: TCP
      imagePullSecrets:
      - name: regcred
---

apiVersion: v1
kind: Service
metadata:
  name: multi-web
  labels:
    run: multi-web
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: multi-web
  type: LoadBalancer
