K8s/no_time.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: no-time
spec:
  replicas: 2
  selector:
    matchLabels:
      app: no-time
  template:
    metadata:
      labels:
        app: no-time
    spec:
      containers:
      - image: swithan/ctf_challenges:no_time
        name: no-time
        imagePullPolicy: Always
        resources:
          requests:
            memory: "16Mi"
            cpu: "0.01"
          limits:
            memory: "32Mi"
            cpu: "0.03"
        ports:
        - containerPort: 3080 
          protocol: TCP
      imagePullSecrets:
      - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: no-time
  labels:
    run: no-time
spec:
  ports:
  - port: 3080
    protocol: TCP
  selector:
    app: no-time
  type: LoadBalancer
